# kara-ai

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  progress.md
apps/api/: .env.example  =0.20.0  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_runtime_settings.py
apps/api/scripts/: seed_knowledge_base.py
apps/api/src/kara_api/: __init__.py  config.py  main.py  middleware.py  privacy.py  runtime_config.py
apps/api/src/kara_api/agent/: __init__.py  advisory.py  document_autofill.py  loop.py  (+3 more)
apps/api/tests/: conftest.py  test_26as_parser.py  test_advisory.py  test_agent_loop.py  test_ais_parser.py  test_chat_endpoints.py  test_config.py  test_connection.py  test_db_models.py  test_document_autofill.py  test_documents_router.py  test_e2e_journeys.py  test_embeddings.py  test_form16_parser.py  test_health.py  test_integration.py  test_knowledge_endpoints.py  test_llm_client.py  test_llm_models.py  test_llm_providers.py  test_middleware.py  test_migration.py  test_parser_cross_document.py  test_profile_builder.py  test_prompts.py  test_runtime_config.py  test_search.py  test_seed.py  test_seed_script.py  test_seeding.py  test_session_manager.py  test_setup_endpoints.py  test_tax_endpoints.py  test_tool_converters.py  test_tool_executor.py  test_tool_schemas.py  test_tools_parse_form16.py
apps/api/tests/fixtures/: ais_factory.py  form16_factory.py  twenty_six_as_factory.py
(+104 files in other folders)
