[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kara-api"
version = "0.1.0"
description = "FastAPI backend for Kara — AI tax advisor for India"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "pgvector>=0.3.6",
    "kara-tax-engine>=0.1.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4",
    "aiosqlite>=0.20.0",
    "reportlab>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kara_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: requires a running PostgreSQL instance",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
